@@ -39,7 +39,7 @@ Output-bin Attribute Extension", and "IPP/1.1: finishings
 'fold',' trim', and 'bale' attribute values extension"
 specifications.</p>
 
-<p>CUPS also provides 15 new operations and many new attributes
+<p>CUPS also provides 16 new operations and many new attributes
 to support multiple IPP printers and printer classes on a single
 host.</p>
 
@@ -80,7 +80,7 @@ server also supports normal browser access via
 
 <h3 class='title'><a name='IPP_OPERATIONS'>CUPS IPP Operations</a></h3>
 
-<p>CUPS provides 14 extension operations in addition to most of the
+<p>CUPS provides 16 extension operations in addition to most of the
 standard IPP and registered extension operations:
 
 <div class='table'><table align='center' border='1' width='80%'
@@ -327,6 +327,12 @@ summary='Supported Operations'>
 	<td>1.3</td>
 	<td>0x400F</td>
 	<td>Get a PPD file.</td>
+</tr>
+<tr>
+	<td><a href='#CUPS_GET_DOCUMENT'>CUPS-Get-Document</a></td>
+	<td>1.4</td>
+	<td>0x4027</td>
+	<td>Get a document file from a job.</td>
 </tr>
 </tbody>
 </table></div>
@@ -1786,6 +1792,90 @@ CUPS-Get-PPD Response:
 <p>If the status code is <tt>successful-ok</tt>, the PPD file follows
 the end of the IPP response.</p>
 
+<h3 class='title'><span class='info'>CUPS 1.4</span><a name='CUPS_GET_DOCUMENT'>CUPS-Get-Document Operation</a></h3>
+
+<p>The CUPS-Get-Document operation (0x4027) gets a document file from a
+job on the server. The document file is specified using the
+<tt>document-number</tt> and either the <tt>job-uri</tt> or <tt>printer-uri</tt>
+and <tt>job-id</tt> identifying the job.</p>
+
+<p>If the document file is found, <tt>successful-ok</tt> is returned with
+the document file following the response data.</p>
+
+<p>If the document file does not exist, <tt>client-error-not-found</tt> is
+returned.</p>
+
+<p>If the requesting user does not have access to the document file,
+<tt>client-error-not-authorized</tt> is returned.
+
+<h4>CUPS-Get-Document Request</h4>
+
+<p>The following group of attributes is supplied as part of the
+CUPS-Get-Document request:
+
+<p>Group 1: Operation Attributes
+
+<dl>
+
+	<dt>Natural Language and Character Set:
+
+	<dd>The "attributes-charset" and "attributes-natural-language"
+	attributes as described in section 3.1.4.1 of the IPP Model and
+	Semantics document.
+
+	<dt>"printer-uri" (uri) and "job-id" (integer)
+	<br><i>OR</i>
+	<br>"job-uri" (uri):
+
+	<dd>The client MUST supply a printer URI and job ID or job URI.
+
+	<dt>"document-number" (integer(1:MAX)):
+
+	<dd>The client MUST supply a document number to retrieve. The
+	<tt>document-count</tt> attribute for the job defines the maximum
+	document number that can be specified. In the case of jobs with
+	banners (<tt>job-sheets</tt> is not "none"), document number 1
+	will typically contain the start banner and document number N
+	will typically contain the end banner.
+
+</dl>
+
+<h4>CUPS-Get-Document Response</h4>
+
+<p>The following group of attributes is sent as part of the
+CUPS-Get-Document Response:
+
+<p>Group 1: Operation Attributes
+
+<dl>
+
+	<dt>Status Message:
+
+	<dd>The standard response status message.
+
+	<dt>Natural Language and Character Set:
+
+	<dd>The "attributes-charset" and "attributes-natural-language"
+	attributes as described in section 3.1.4.2 of the IPP Model and
+	Semantics document.
+
+	<dt>"document-format" (mimeType):
+
+	<dd>The format of the document file.
+
+	<dt>"document-number" (integer(1:MAX)):
+
+	<dd>The requested document number.
+
+	<dt>"document-name" (name(MAX)):
+
+	<dd>The name that was supplied with the document, if any.
+
+</dl>
+
+<p>If the status code is <tt>successful-ok</tt>, the document file follows
+the end of the IPP response.</p>
+
 
 <h2 class='title'><a name='ATTRIBUTES'>Attributes</a></h2>
 
@@ -1913,6 +2003,11 @@ printing text files. The default value is 1.
 <p>The cpi attribute specifies the number of characters per inch when
 printing text files. Only the values 10, 12, and 17 are currently
 supported. The default value is 10.
+
+<h4><a name="document-count">document-count (integer(1:MAX))</a></h4>
+
+<p>The document-count attribute specifies the number of documents that
+are present in the job.
 
 <h4><a name="fitplot">fitplot (boolean)</a></h4>
 
