@@ -1,8 +1,12 @@
-CHANGES.txt - 2007-08-27
+CHANGES.txt - 2007-08-29
 ------------------------
 
 CHANGES IN CUPS V1.4b1
 
+	- The scheduler now supports a CUPS-Get-Document operation
+	  that returns the specified print job document (STR #118)
+	- The cupsfilter utility now supports a "-J jobid" option
+	  to filter the document from the specified job.
 	- The scheduler (cupsd) now supports a new option (-t) to
 	  do a syntax check of the cupsd.conf file (STR #2003)
 	- Added new cupsGetPPD3() API to allow applications to
